objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <label>Confidence Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                    <default>true</default>
                    <label>On target</label>
                </value>
                <value>
                    <fullName>At risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desc__c</fullName>
        <formula>LEFT( Description__c , 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desc.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Milestone_of_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for cycle time calculations</inlineHelpText>
        <label>Final Milestone of Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedById__c</fullName>
        <label>Legacy CreatedById</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Milestone_Name__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Milestone Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity__c</fullName>
        <label>Legacy Opportunity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_OwnerId__c</fullName>
        <label>Legacy OwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Notes__c</fullName>
        <label>Milestone Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Target_Due_Date__c</fullName>
        <inlineHelpText>Please do not change this date.</inlineHelpText>
        <label>Original Target Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <formula>IF( ISBLANK( Completed_Date__c ) ,  Target_Completion_Date__c ,  Completed_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <inlineHelpText>CSA Team has completed the survey</inlineHelpText>
        <label>Survey Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Required__c</fullName>
        <label>Survey Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Submitted__c</fullName>
        <inlineHelpText>Survey was submittd to the CSA</inlineHelpText>
        <label>Survey Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <inlineHelpText>PS target completion date for this milestone.</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kickoff</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Telco</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Project Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Confidence_Level__c</columns>
        <columns>Description__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legacy_Id__c</field>
            <operation>contains</operation>
            <value>a1100000000zpA1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Planned_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Planned Milestones</label>
    </listViews>
    <nameField>
        <displayFormat>M{000000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>